--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "express": "^4.17.3",
+    "node-localstorage": "^2.2.1",
     "uuid": "^8.3.2"
   }
 }
